--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <div align="center">
     <p><img src="favicon.ico" /></p>
     <h2>Minecraft下载</h2>
+    <p><a href="https://cdn.nicemc.dpdns.org/MCDownload.exe">Windows便捷下载启动器下载</a></p>
     <hr>
     <h2>国际版下载（官方启动器）</h2>
     <h2><a href="https://aka.ms/minecraftClientGameCoreWindows">Windows10/11</a></h2>
