--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h2>Minecraft下载</h2>
     <p><a href="https://cdn.nicemc.dpdns.org/MCDownload.exe">Windows便捷下载启动器下载</a></p>
     <hr>
+    <p><img src="https:/img.nicemc.dpdns.org/java.png" /></p>
+    <hr>
     <h2>国际版下载（官方启动器）</h2>
     <h2><a href="https://aka.ms/minecraftClientGameCoreWindows">Windows10/11</a></h2>
     <h2><a href="https://aka.ms/minecraftClientWindows">Windows旧版</a></h2>
@@ -22,10 +24,14 @@
     <h2><a href="https://play.google.com/store/apps/details?id=com.mojang.minecraftpe">Android（Google Play）</a></h2>
     <h2><a href="https://itunes.apple.com/app/minecraft-pocket-edition/id479516143?mt=8">IOS</a></h2>
     <hr>
+    <p><img src="https://img.nicemc.dpdns.org/dxc.png" /></p>
+    <hr>
     <h2>中国版下载（网易官服）</h2>
     <h2><a href="https://loadingbaycn.webapp.163.com/app/v1/download_client/windows/mkt-x19-official/url">PC</a></h2>
     <h2><a href="https://adl.netease.com/d/g/mc/c/gwnew?type=android">Android</a></h2>
     <h2><a href="https://adl.netease.com/d/g/mc/c/gwnew?type=ios">IOS</a></h2>
+    <hr>
+    <p><img src="https://img.nicemc.dpdns.org/bedrock.png" /></p>
     <hr>
     <h2>中国版下载（4399渠道服）</h2>
     <h2><a href="https://dl.img4399.com/download/4399wdsj.exe">PC</a></h2>
@@ -39,6 +45,8 @@
     <h2>国际版服务器下载</h2>
     <h2><a href="https://www.minecraft.net/download/server">Java</a></h2>
     <h2><a href="https://www.minecraft.net/download/server/bedrock">Bedrock</a></h2>
+    <hr>
+    <p><img src="https://img.nicemc.dpdns.org/cq.png" /></p>
     <hr>
     <h2>Minecraft下载 | NiceMC</h2>
     <h3>本站基于NiceMC Global Server运行</h3>
