--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Minecraft下载</h2>
     <p><a href="https://cdn.nicemc.dpdns.org/MCDownload.exe">Windows便捷下载启动器下载</a></p>
     <hr>
-    <p><img src="https:/img.nicemc.dpdns.org/java.png" /></p>
+    <p><img src="https://img.nicemc.dpdns.org/java.png" /></p>
     <hr>
     <h2>国际版下载（官方启动器）</h2>
     <h2><a href="https://aka.ms/minecraftClientGameCoreWindows">Windows10/11</a></h2>
